<resources>
    <string name="app_name" translatable="false">One Finance</string>
    <string name="my_wallet_pro" translatable="false">One Finance</string>
    <string name="version" translatable="false">Version 1.1.9</string>
    <string name="recent_transactions">Transactions</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="get_pro">Get Pro</string>
    <string name="about">About</string>
    <string name="developed_by_tashila_pathum">Developed by Tantalum Technologies</string>
    <string name="balance">Balance:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wallet">Wallet</string>
    <string name="bank">Bank</string>
    <string name="lent">Lent</string>
    <string name="borrowed">Borrowed</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="earned">Earned</string>
    <string name="spent">Spent</string>
    <string name="_0_00">0.00</string>
    <string name="example_item_1">Example item 1\n$7.25</string>
    <string name="home">Home</string>
    <string name="quick_list">Quick list</string>
    <string name="settings_quick_list">Quick list</string>
    <string name="edit_quick_list_items">Edit quick list items</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="english">English</string>
    <string name="sinhala">සිංහල</string>
    <string name="weekly_and_daily_budgets_will_be_calculated_based_on_this">Weekly and daily budgets will be calculated based on this.</string>
    <string name="eg_500">Eg:- 500</string>
    <string name="both_amt_and_des">Please fill both \'Amount\' and \'Description\'</string>
    <string name="one_time_setup">Welcome to One Finance</string>
    <string name="all_fields_are_optional_you_can_change_these_settings_later">All fields are optional. You can change these settings later.</string>
    <string name="choose_language">Choose language:</string>
    <string name="set_currency">Set currency:</string>
    <string name="never_type_in_the_currency_when_adding_amounts_even_if_you_didn_t_set_the_currency">Never type in the currency when adding amounts, even if you didn\'t set the currency.</string>
    <string name="eg">Eg:- $</string>
    <string name="add_monthly_budget">Add monthly budget:</string>
    <string name="continue_next">Continue</string>
    <string name="language">Language</string>
    <string name="set_your_preferred_language">Set your preferred language</string>
    <string name="currency">Currency</string>
    <string name="set_your_country_s_currency">Set your country\'s currency</string>
    <string name="budget">Monthly Budget</string>
    <string name="edit_your_monthly_budget_weekly_and_daily_budgets_will_be_calculated_based_on_this">Weekly and daily budgets will be calculated based on this</string>
    <string name="restart_for_changes">Restart the app to apply changes</string>
    <string name="example_quick_item_text">Tap here to add items to the quick list</string>
    <string name="spend_more_than_have">You can\'t spend more than you have!</string>
    <string name="coming_soon">Coming soon</string>
    <string name="email"><u><i>tantalumtech@gmail.com</i></u></string>
    <string name="pro_features_txt">Pro features:</string>
    <string name="get_pro_btn">Get Pro</string>
    <string name="notification_time">Reminder time</string>
    <string name="change_the_time_you_receive_the_daily_reminder">Change the time you receive the daily reminder</string>
    <string name="theme">Theme</string>
    <string name="choose_between_dark_and_light_themes">Switch between dark and light themes</string>
    <string name="pro_feature">Pro feature</string>
    <string name="pro" translatable="false">Pro</string>
    <string name="entered_incorrectly">You\'ve entered data incorrectly</string>
    <string name="thank_you">Thank you for downloading One Finance! \n\nOne Finance is a personal finance app designed to use on-the-go. You can add your daily incomes, expenses and other transactions with just a few clicks.</string>
    <string name="rate_app">Rate app!</string>
    <string name="contact_the_developer_problems">Contact the developer if you encounter any problem with the app:</string>
    <string name="budget_left">Budget left:&#160;</string>
    <string name="r_income">Income:&#160;</string>
    <string name="r_spent">Spent:&#160;</string>
    <string name="r_budget">Budget:&#160;</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="r_this_week">This week</string>
    <string name="r_last_week">Last week</string>
    <string name="r_this_month">This month</string>
    <string name="r_last_month">Last month</string>
    <string name="notification_set_at">Notification set at&#160;</string>
    <string name="everydayy">&#160;everyday</string>
    <string name="buy_pro_for_this">Buy the Pro version to unlock this feature!</string>
    <string name="buy">Buy Now</string>
    <string name="trans_notify_title">Did you add the transactions you made today?</string>
    <string name="notification_msg">Tap here to open One Finance</string>
    <string name="predate">Predate</string>
    <string name="predate_description">Long-tap to add a previous date to the transaction</string>
    <string name="search_description">You can search by either description or date</string>
    <string name="search">Search…</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="account_name">Account name*</string>
    <string name="current_balance">Current balance*</string>
    <string name="annual_interest">Annual interest rate</string>
    <string name="account_number_optional">Account number</string>
    <string name="additional_info_optional">Additional info</string>
    <string name="multi_interest_example"><![CDATA[Eg:-\n 0 - 999 -> 0.01\n 1000 - 4999 -> 0.02\n 5000 - 99999999 -> 0.03\n]]></string>
    <string name="multi_interests_thing">If you bank offers different interests for different balances, you can add them here. Leave the extra spaces blank if there are any.\n</string>
    <string name="min_amount">minimum</string>
    <string name="max_amount">maximum</string>
    <string name="interest">interest</string>
    <string name="add_multiple_interests">Add multiple interests</string>
    <string name="cancel">Cancel</string>
    <string name="new_account">New account</string>
    <string name="you_can_edit_or_delete_the_account_later">You can edit or delete the account later.</string>
    <string name="selected_dot"><b>\u2713</b></string>
    <string name="multiple">-Multiple-</string>
    <string name="bank_welcome_message">You can manage your bank accounts here. Add an account to continue.</string>
    <string name="bank_welcome_title">Welcome</string>
    <string name="account_name_desc">To identify the account (displayed at the top of the "Bank" page)</string>
    <string name="interest_description">If you add this, the interest will be automatically calculated and added to your balance. \nNote:The accuracy depends on the location, bank, taxes… etc.</string>
    <string name="add">Add</string>
    <string name="deposit_to_bank">Deposit to bank</string>
    <string name="deposit_to_bank_descr">You can directly deposit money to your selected account using this. Long-tap to select a different account.\n\nNote: Description is not required for this. Relevant info will be added automatically.</string>
    <string name="clear_muliti_thing">Clear the multiple interests to enable this field</string>
    <string name="edit_account">Edit account</string>
    <string name="recent_activities">- Recent activities -</string>
    <string name="to_bank">To bank</string>
    <string name="main_account">"Account: "</string>
    <string name="main_balance">"Balance: "</string>
    <string name="account_details">Account details</string>
    <string name="ad_balance">Balance</string>
    <string name="ad_interest_rate_s">Interest rate(s)</string>
    <string name="account_number">Account number</string>
    <string name="additional_information">Additional information</string>
    <string name="created_date">Created date</string>
    <string name="last_updated">Last Updated</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="loading">Loading…</string>
    <string name="thank_u_for_pro">Thank you for purchasing the Pro version!\nTap \'OK\' to apply changes.</string>
    <string name="billing_license" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgKVo1y6iSjVnp9/gAkJngKUDV681C4kbi7WVsQufL7XQIizHjzY1mswuEbrUc0vM/bZqtJUOBjOsjxkCI1TbJGV7wZ0NUsjfwHM26I+5C3WFNQaHwPsz0PL+kHeU/iuwFnFwjRfRhEZHT5CmwcvjuJNojcAQUnD+gWZEZUKvH42SYMAQDx339g51c6xR/qnJ5SRwbfLmY44++QV72gytKWns6k2dQOGs4lzyEOgaYfYpH+SFDPd52RLlpJOkG/fhUW9dxBt/BrlHC2dGSIdszsfXZjfoLODQVyNj9RX+VvkjcHHYexwaWeYiZCmnVoTwD/ZGtWNC+WWKZs13cw4yFwIDAQAB</string>
    <string name="loans">Loans</string>
    <string name="bills">Bills</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="restore_purchase_des">If you have already purchased the Pro version, you can restore it using this.\nMake sure that you\'re logged in from the same Google account you used to purchase the item.</string>
    <string name="switch_acc">Switch accounts</string>
    <string name="acc_switch_des">Tap here to switch or add accounts.</string>
    <string name="updated">Updated</string>
    <string name="withdrawn_money">Withdrawn money</string>
    <string name="withdrawn_money_des">Withdrawn money will directly go to the Wallet. You can spend the money from there.</string>
    <string name="acc_first">Please add a bank account first</string>
    <string name="spent_percent">%\nspent</string>
    <string name="edit_monthly_budget">Edit monthly budget</string>
    <string name="choose_acc">Choose account</string>
    <string name="reached_acc_limit">You\'ve reached account limit</string>
    <string name="r_a_l_des">Upgrade to Pro version to add multiple accounts!</string>
    <string name="set_home_screen">Set home screen</string>
    <string name="add_currency">Add currency</string>
    <string name="select_lang">Select language</string>
    <string name="multi_interests">Multiple interests</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="cleared">Cleared</string>
    <string name="select_theme">Select theme</string>
    <string name="home_screen">Home screen</string>
    <string name="change_the_screen_which_shows_up_when_starting_the_app">Pick Wallet, Bank, Transactions, Investments or Tools as the starting page</string>
    <string name="current">Current:&#160;</string>
    <string name="highest">Highest:&#160;</string>
    <string name="lowest">Lowest:&#160;</string>
    <string name="cart">Cart</string>
    <string name="more_apps">More apps by us</string>
    <string name="required_fields">*Required fields</string>
    <string name="date">Date</string>
    <string name="remove_transaction_note">Note: If you want to remove the transaction, swipe it to a side.</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="icon_and_label">Icon and label</string>
    <string name="icon_only">Icon only</string>
    <string name="label_only">Label only</string>
    <string name="bank_account_notice">Important: This account is not connected to your real bank account in any way. So you have to update everything manually. The purpose of this virtual account is just to keep track of the activities of your real-world bank account.</string>
</resources>