<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:padding="16dp">

    <RadioButton
        android:id="@+id/homeWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/wallet" />

    <RadioButton
        android:id="@+id/homeBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank" />

    <RadioButton
        android:id="@+id/homeCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart" />

    <RadioButton
        android:id="@+id/homeBills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bills" />

</RadioGroup>
