<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".accounts.NewAccount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/back_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="go back"
                        android:onClick="onClickCancel"
                        android:padding="8dp"
                        android:src="?attr/homeAsUpIndicator" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="6dp"
                        android:layout_toEndOf="@id/back_arrow"
                        android:padding="8dp"
                        android:text="@string/new_account"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/colorAccent" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_account_notice"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_marginBottom="16dp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/accName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:helperText="@string/account_name_desc">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_name"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/currentBalance"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/current_balance"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:id="@+id/linearLayoutAIR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/annualInterest"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:helperText="@string/interest_description">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/annual_interest"
                            android:importantForAutofill="no"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/multiInterests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="4dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:contentDescription="@string/add_multiple_interests"
                        android:padding="8dp"
                        android:src="@drawable/ic_add" />

                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/accNumber"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_number_optional"
                        android:importantForAutofill="no"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/additional"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/additional_info_optional"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine|textImeMultiLine|textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/required_fields" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="40dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancel"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClickCancel"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        app:cornerRadius="16dp"
                        tools:ignore="ButtonStyle" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClickAdd"
                        android:text="@string/add"
                        android:textAllCaps="false"
                        app:cornerRadius="16dp"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <TextView
                    android:id="@+id/bottomNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/you_can_edit_or_delete_the_account_later" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>